// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon 1`] = `
<div>
  <div
    class="xrk-tab xrk-f xrk-tab-default"
    data-testid="tab"
  >
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click xrk-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        <div
          class="taro-img xrk-img xrk-tab-item-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="2121.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`not currenIndex 1`] = `
<div>
  <div
    class="xrk-tab xrk-f xrk-tab-default"
    data-testid="tab"
  >
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        <div
          class="taro-img xrk-img xrk-tab-item-icon"
        >
          <img
            class="taro-img__mode-scaletofill"
            src="2121.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`option 1`] = `
<div>
  <div
    class="xrk-tab xrk-f xrk-tab-default"
    data-testid="tab"
  >
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click xrk-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item2
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item4
      </div>
    </div>
  </div>
</div>
`;

exports[`option of button 1`] = `
<div>
  <div
    class="xrk-tab xrk-f xrk-tab-button"
    data-testid="tab"
  >
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-light"
      type="button"
    >
      item1
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary __active"
      type="button"
    >
      item2
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-light"
      type="button"
    >
      item4
    </button>
  </div>
</div>
`;

exports[`option of id 1`] = `
<div>
  <div
    class="xrk-tab xrk-f xrk-tab-default"
    data-testid="tab"
  >
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click xrk-tab-item-active __active"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item1
      </div>
    </div>
    <div
      class="xrk-tab-item __x-st-exp __x-st-click"
      data-testid="tab-item"
    >
      <div
        class=""
      >
        item22121
      </div>
    </div>
  </div>
</div>
`;
